Fixed text Alignment in preview

--- a/css/custome.css
+++ b/css/custome.css
@@ -383,7 +383,9 @@ a.add-parent { margin-bottom:15px; }
     font-family: Impact, Charcoal, sans-serif;
     font-size: 25px;
 }
-
+.inv-tab-bottom{
+    text-align: center;
+}
 
 
 
